[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/stage/stage.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/stage/leaderboard.gd" type="Script" id=2]
[ext_resource path="res://game/stage/leaderboard_highscores.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/stage/leaderboard_myrecord.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/stage/leaderboard_presskey.tscn" type="PackedScene" id=5]

[sub_resource type="Theme" id=1]

[node name="Leaderboard" instance=ExtResource( 1 )]
theme = SubResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 464.0
custom_constants/separation = 24

[node name="HighScores" parent="MarginContainer/VBoxContainer" index="0" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 288.0
margin_bottom = 192.0

[node name="MyRecord" parent="MarginContainer/VBoxContainer" index="1" instance=ExtResource( 4 )]
margin_bottom = 332.0

[node name="PressKey" parent="MarginContainer/VBoxContainer" index="2" instance=ExtResource( 5 )]
margin_top = 356.0
margin_bottom = 436.0
